public/css/style.css
:root {
    /* THEME COLORS (STILL FINALIZING)*/
    /* ---- vars ---- */
    /* background color */
    --background: #EBEBEB;
    /* component colors */
    --theme: #52b788;
    --off-theme: #27634a;
    /* Support color */
    --black: #2a2a2a;
    --off-black: #201f1f;

    /* FONTS */
    /* font-weight: var(--rubik-light) */
    --rubik-light: 300;
    --rubik-base: 400;
    --rubik-bold: 600;
}

/* IMAGE SHADOWS */
/* box-shadow: 0px 2px 10px 4px rgba(20, 20, 20, 0.75); */


h1, 
h2, 
h3, 
h4, 
h5, 
h6, 
p, 
a,
label {
    font-family: 'Rubik', monospace, sans-serif;
}

h2 {
    font-size: 48px;
    color: var(--theme);
    font-weight: var(--rubik-bold);
}

h3 {
    color: var(--background);
    font-weight: var(--rubik-bold);
    font-size: 36px;
}

h4 {
    color: var(--background);
    font-weight: var(--rubik-bold);
    font-size: 28px;
}

p,
a,
label,
legend {
    color: var(--background);
}

.word-change {
    color: var(--theme);
}

.custom-title {
    font-size: 28px;
    font-weight: var(--rubik-bold);
}

.logo-bracket {
    font-size: 38px;
    color: var(--theme);
    text-shadow: 1px 1px 6px rgba(39, 99, 74, 0.75);
}

.custom-title:hover {
    cursor: pointer;
    color: var(--theme);
    text-shadow: 1px 1px 6px rgba(39, 99, 74, 0.75);
    transition: 0.2s;
}

.nav {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.nav li a:hover {
    cursor: pointer;
    color: var(--theme);
    text-shadow: 1px 1px 6px rgba(39, 99, 74, 0.75);
    transition: 0.2s;
}

.landing-img {
    width: 480px;
    height: auto;
    box-shadow: 0px 2px 10px 4px rgba(20, 20, 20, 0.75);
}

.info-img {
    width: 380px;
    height: auto;
    box-shadow: 0px 2px 10px 4px rgba(20, 20, 20, 0.75);
}

.form-btn {
    background-color: var(--off-black);
    color: var(--background);
    padding: 8px;
    border: 3px solid var(--theme);
}

.form-link {
    color: var(--theme);
    text-decoration: none;
}

.form-link:visited {
    color: var(--theme);
}

.form-link:hover {
    cursor: pointer;
    color: var(--theme);
    text-shadow: 1px 1px 6px rgba(39, 99, 74, 0.75);
    transition: 0.2s;
}

.form-btn:visited {
    background-color: var(--off-black);
    color: var(--background);
}

.form-btn:hover {
    color: var(--off-black);
    background-color: var(--theme);
    box-shadow: 0px 0px 8px 3px rgba(39, 99, 74, 0.75);
    transition: 0.3s;
    cursor: pointer;
}

/* ------------- LANDING PAGE - BEGIN ------------- */
.hero-container {
    background-color: var(--off-black);
    padding: 38px;
    margin-bottom: 32px;
}

.sub-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.info-container {
    background-color: var(--off-black);
    padding: 24px;
}

.info-section {
    margin-bottom: 120px;
}

.info-last-section {
    margin-bottom: 12px;
}

.custom-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: var(--black);
    margin-bottom: 12px;
}

.metrics-container {
    max-width: 860px;
    margin: 32px auto;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

.metric {
    text-align: center;
}

.metric h4 {
    color: var(--theme);
}

.metric p {
    font-size: 12px;
    max-width: 200px;
}

.delete-button {
    width: 10px;
    height: 10px;
}

.custom-card {
    background-color: var(--off-black);
    border: 1px solid var(--off-black);
    padding: 8px;
    min-height: 400px;
}

/* FOUNDATION STYLE CHANGE */
.cell {
    margin-bottom: 16px;
}

.custom-card:hover {
    transition: 0.2s;
    box-shadow: 0px 0px 8px 3px rgba(39, 99, 74, 0.75);
}

.team-post-title {
    color: var(--theme);
}

.team-post-body {
    max-width: 90%;
}

.team-post-user {
    display: flex;
    justify-content: flex-start;
    width: 90%;
}

.team-post-user p {
    color: white;
}

.username {
    color: var(--theme);
}

/* Separator for comments link on team dashboard */
.bar {
    background-color: var(--off-theme);
    height: 1px;
    width: 100%;
    margin-bottom: 4px;
}

.top-bar {
    margin-bottom: 16px;
    background-color: var(--off-theme);
    padding: 0;
    height: 2px;
    width: 75%;
}

.page-title {
    margin-bottom: 16px;
}

.bar-wrap {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.card-footer {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.article-post-card {
    box-shadow: 0px 2px 10px 4px rgba(20, 20, 20, 0.75);
    border-radius: 8px;
    padding: 12px;
    height: 85vh;
}

.home {
    background-color: var(--black);
    height: 100vh;
    max-width: 960px;
    margin: 0 auto;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;  
}

.call-to-action {
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    background-color: var(--off-black);
    height: 200px;
    display: flex;
}

.sign-up-call,
.register-call {
    text-align: center;
}

.sign-up-call p,
.register-call p {
    font-size: 18px;
}

/* ------------- LANDING PAGE - END ------------- */

.footer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    position: relative;
    background-color: var(--off-black);
    bottom: 0;
    width: 100%;
    height: 6.5rem;
}

.login-title {
    background-color: var(--off-black);
    flex-direction: row;
    justify-content: center;
    align-items: center;
    font-weight: var(--rubik-bold);
    color: var(--theme);
}

.login-btn-container {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.signup-page-title {
    background-color: var(--off-black);
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-weight: var(--rubik-bold);
    color: var(--theme);
}

.signup-page-buttons {
    border: 1px solid red;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.login-form {
    background-color: var(--black);
}

.article-title {
    background-color: var(--off-black);
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.user-dashboard-article {
    background-color: var(--black);
}


/* ------------- MEDIA QUERIES ------------- */

@media screen and (max-width: 760px) {
    .nav {
        flex-direction: column;
    }
}

/* ------------- ------------- */

.preferences-modal-title {
    background-color: var(--off-black);
    color: var(--theme)
}

.preferences-modal-values {
    background-color: var(--off-black);
}

.preferences-modal {
    background-color: var(--black);
}

.user-dashboard-title {
    color: var(--theme);
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.article-category {
    background-color: var(--off-black);
    font-weight: var(--rubik-bold);
    color: var(--theme);
}

.custom-plus{
    color: var(--background);
}

.custom-plus:hover {
    color: var(--theme);
    cursor: pointer;
}

.post-modal {
   background-color: var(--black);
}

.post-modal-title {
    color: var(--theme)
}

